--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Tienda Potter</title>
+    <link rel="shortcut icon" href="./media/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="./js/main.js" defer></script>
@@ -14,12 +15,12 @@
 <body>
     <!-- HEADER -->
     <div class="wellcome">
-        <p class="wellcome text-center">Bienvenido a la Tienda Potter!</p>
+        <p class="text-center font-roboto fs-5">Bienvenido a la Tienda Potter!</p>
     </div>
     <header>
         <nav class="navbar navbar-expand-lg container sticky-top">
 
-            <a class="navbar-brand fs-2" href="./index.html">Tienda Potter!</a>
+            <h1><a class="navbar-brand fs-1 font-roboto" href="./index.html"><img class="logo" src="./media/logo.webp" alt="Logo">Tienda Potter!</a></h1>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,9 +29,9 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link fs-4" aria-current="page" href="#">Inicio</a>
-                    <a class="nav-link fs-4" href="#">Ubicacion</a>
-                    <a class="nav-link fs-4" href="#">Contacto</a>
+                    <a class="nav-link fs-4 font-rubik" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link fs-4 font-rubik" href="#">Ubicacion</a>
+                    <a class="nav-link fs-4 font-rubik" href="#">Contacto</a>
                 </div>
             </div>
         </nav>
@@ -42,8 +43,14 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
-
+    <footer class="py-3">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="./404.html" class="nav-link px-2 ">Facebook</a></li>
+            <li class="nav-item"><a href="api.whatsapp.com/send?phone=541128054406" target="_blank"
+                    class="nav-link px-2 ">Whatsapp</a></li>
+            <li class="nav-item"><a href="./404.html" class="nav-link px-2 ">Instagram</a></li>
+        </ul>
+        <p class="text-center">Todos los derechos reservados a Ezequiel Carusela</p>
     </footer>
 
     <!-- BS -->
