Arregle el problema del video del index, no se reproducia porque los autoplay solo funcionan si tiene el atributo muted asignado, y tambien elimine un archivo que no utilizo mas

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
         <!-- VIDEO MAIN -->
         <div class="mt-5 mb-3 container">
-            <video class="videoTienda" autoplay src="./media/tiendaPotter.mp4"></video>
+            <video class="videoTienda" autoplay muted src="./media/tiendaPotter.mp4"></video>
         </div>
         <div>
             <h2 class="text-center mt-5 mb-5 indexH2"> Articulos Magicos! </h2>
